--- a/app/globals.css
+++ b/app/globals.css
@@ -71,6 +71,14 @@ button:hover {
   @apply bg-gray-200 text-gray-900;
 }
 
+.btn-delete {
+  @apply bg-red-500 text-white py-2 px-4 rounded hover:bg-red-700;
+}
+
+.btn-edit {
+  @apply bg-green-500 text-white py-2 px-4 rounded hover:bg-green-700;
+}
+
 
 
 /* form styles */
